--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "dotenv": "^16.0.0",
+    "google-tts-api": "^2.0.2",
     "node-bash": "^5.0.1",
     "node-fetch": "^3.2.2",
     "telegraf": "4.3.0"
