--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "google-tts-api": "^2.0.2",
     "node-bash": "^5.0.1",
     "node-fetch": "^3.2.2",
+    "openai": "^3.1.0",
     "telegraf": "4.3.0"
   },
   "devDependencies": {
